--- a/index.html
+++ b/index.html
@@ -31,26 +31,10 @@
     <section class="projects">
         <h2>My Projects</h2>
         <div class="grid-container">
-            <div class="card-box" id="card-box1">
-                <div class="img-box"></div>
-                <div></div>
-            </div>
-            <div class="card-box">
-                <div class="img-box"></div>
-                <div></div>
-            </div>
-            <div class="card-box">
-                <div class="img-box"></div>
-                <div></div>
-            </div>
-            <div class="card-box">
-                <div class="img-box"></div>
-                <div></div>
-            </div>
-            <!-- <div class="card">Furniture  Web</div>
+            <div class="card">Furniture  Web</div>
             <div class="card">Article  Web</div>
             <div class="card">Portfolio  Web</div>
-            <div class="card">Motorala clone Web</div> -->
+            <div class="card">Motorala clone Web</div>
         </div>
     </section>
     <footer class="footer">
@@ -59,4 +43,5 @@
         </p>
     </footer>
 </body>
+
 </html>
